--- a/keluarga.html
+++ b/keluarga.html
@@ -10,7 +10,7 @@
   <div class="container-keluarga">
     <center>
       <h1 class=>FAVORITE PERSON</h1>
-      <p class="sub">halowww</p>
+      <p>halowww</p>
     </center>
     
     <div class="foto-keluarga">
