--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <p><strong>Tempat, Tanggil Lahir:</strong> Malang, 21 Februari 2009</p>
       <p><strong>Jenis Kelamin:</strong> Perempuan</p>
       <p><strong>Hobi:</strong> Membaca AU, Mendengarkan Musik</p>
+      <p><strong>Alamat:</strong>Jalan Teluk Pelabuhan Ratu</p>
     </div>
   </table>
     <div class="navigasi">
